# osm-countries-geojson

./: .gitattributes  .gitignore  Makefile  Pipfile  README.md  config.py  main.py  natural_earth.py  osm_countries_gen.py  overpass.py  pkgs.nix  pyproject.toml  shell.nix  toposimplify.py  utils.py
.github/workflows/: update.yaml
geojson/: README.md  osm-countries-0-00001.geojson  osm-countries-0-0001.geojson  osm-countries-0-001.geojson.br  osm-countries-0-001.geojson.zst  osm-countries-0-01.geojson  osm-countries-0-01.geojson.br  osm-countries-0-01.geojson.zst  osm-countries-0-1.geojson  osm-countries-0-1.geojson.br  osm-countries-0-1.geojson.zst
models/: osm_country.py
